--- a/styles/style.css
+++ b/styles/style.css
@@ -233,11 +233,14 @@ li {
 /* Subscribe_plan */
 
 .plan {
+  background-color: #f8f8f8;
+  padding-top: 80px;
+}
+
+.plan__container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f8f8f8;
-  padding-top: 80px;
 }
 
 .plan__title {
@@ -252,10 +255,10 @@ li {
   font-weight: 400;
   font-size: 16px;
   line-height: 30px;
-  color: #4f5665;
-  margin-bottom: 60px;
   max-width: 555px;
   text-align: center;
+  margin: 0 auto;
+  margin-bottom: 60px;
 }
 
 .plan__var {
@@ -336,3 +339,36 @@ li {
 }
 
 /* Subscribe_plan/ */
+
+/* Map */
+
+.map__title {
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 50px;
+  text-align: center;
+  color: #0b132a;
+  max-width: 384px;
+  margin-bottom: 20px;
+}
+
+.map__desc {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  text-align: center;
+  color: #4f5665;
+  max-width: 554px;
+  margin-bottom: 156px;
+}
+.map__desc--medium {
+  font-weight: 500;
+}
+
+.sponsors {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 36px;
+}
+/* Map/ */
