--- a/styles/style.css
+++ b/styles/style.css
@@ -372,3 +372,132 @@ li {
   gap: 36px;
 }
 /* Map/ */
+
+/* Reviews */
+
+.reviews {
+  padding-bottom: 50px 0 180px;
+}
+
+.review-card {
+  padding: 30px;
+  border: 2.5px solid #dddddd;
+  border-radius: 10px;
+  transition: all 200ms ease-in-out;
+}
+.review-card:hover {
+  border-color: #f53838;
+}
+
+.review-card__headder {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.review-card__info {
+  flex-grow: 1;
+  padding-left: 20px;
+}
+
+.review-card__name {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 18px;
+  color: #0b132a;
+  margin-bottom: 5px;
+}
+
+.review-card__location {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 14px;
+  color: #4f5665;
+}
+
+.review-card__raiting {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.review-card__raiting-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  color: #0b132a;
+}
+
+.review-card__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  color: #0b132a;
+}
+
+.swiper-pagination {
+  position: static;
+  width: auto !important;
+}
+
+.swiper-pagination-bullet {
+  width: 16px;
+  height: 16px;
+  background-color: #dde0e4;
+  opacity: 1;
+  border-radius: 16px;
+  transition-property: width, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: ease-in-out;
+}
+.swiper-pagination-bullet-active {
+  width: 46px;
+  background-color: #f53838;
+}
+
+.reviews__slider-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 60px;
+}
+
+.reviews__slider-nav {
+  display: flex;
+  gap: 20px;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  position: static;
+  margin-top: 0;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #f53838;
+  color: #fff;
+  border: 2px solid #f53838;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.swiper-button-prev svg,
+.swiper-button-next svg {
+  width: auto;
+  height: auto;
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  content: none;
+}
+
+.swiper-button-next.swiper-button-disabled,
+.swiper-button-prev.swiper-button-disabled {
+  opacity: 1;
+  background-color: #fff;
+  color: #f53838;
+}
+
+/* /Reviews */
